--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <h1 class="inputs" id="light" onclick="lights()">Click Me to Light Mode</h1>
             <h1 class="inputss" id="ilaw" onclick="ilaws()">Click Me to Dark Mode</h1>
             <a class="tt" id="tt" href="#section2">T-shirt</a>
-            <a class="design" id="design" href="#section1">Prints</a>
+            <a class="design" id="design" href="#section1">Lay Outs</a>
             <a class="contact" id="contact" href="#section3">About Us</a>
             <a href="https://www.facebook.com/Tabibeegaming"><i id="tabibee" class="fa-solid fa-message"></i></a>
         </div>
@@ -37,7 +37,7 @@
                 <h1 id="welcome" class="welcome">ᴡᴇʟᴄᴏᴍᴇ ᴛᴏ ᴇxᴄʟᴜꜱɪᴠᴇ ᴛ ꜱʜɪʀᴛ ᴡᴇʙꜱɪᴛᴇ</h1>
             </div>
             <div>
-                <h1 id="prits" class="prints">Prints / Business</h1>
+                <h1 id="prits" class="prints">Prints / Lay Outs</h1>
                 <a href="https://i.ibb.co/Hn3sb8v/ASTRONAUT.png"><img id="bs" class="img1" src="ASTRONAUT.png" alt=""></a>
                 <a href="https://i.ibb.co/pWSm0w7/CarShow.png"><img id="bss" class="img2" src="CarShow.png" alt=""></a>
                 <a href="https://i.ibb.co/qJGWMJ4/PubG.png"><img id="bsss" class="img3" src="PubG.png" alt=""></a>
@@ -74,7 +74,7 @@
                     Reminder ang presyo ng design ay naka depende sa ipapagawa mong design.
                 </p><br><br>
                 <a class="tshirt omsim" href="#section2">T shirt</a>
-                <a class="desenyo omsim" href="#section1">Prints</a>
+                <a class="desenyo omsim" href="#section1">Lay Outs</a>
             </div>
             <div id="bg" class="bg">
                 <div class="letter">
@@ -128,9 +128,9 @@
         <div class="main">
             <div id="inside" class="main-inside">
                 <img class="board1" src="Artboard 1.png" alt="">
-                <a class="contact1" href="">Contact</a>
+                <a class="contact1" href="#tungkol">Contact</a>
                 <a class="tshirts1" href="#pangatlo">T shirt</a>
-                <a class="designs1" href="#second">Design / Business</a>
+                <a class="designs1" href="#second">Design / Lay Outs</a>
                 <i id="onn" onclick="on()" class="fa-solid fa-sun"></i>
                 <i id="offf" onclick="off()" class="fa-solid fa-moon"></i>
             </div>
@@ -141,7 +141,7 @@
             <h1 id="welcomee" class="welcome">ᴡᴇʟᴄᴏᴍᴇ ᴛᴏ ᴇxᴄʟᴜꜱɪᴠᴇ ᴛ ꜱʜɪʀᴛ ᴡᴇʙꜱɪᴛᴇ</h1>
         </div>
         <div>
-            <h1 id="printer" class="prints">Prints / Business</h1>
+            <h1 id="printer" class="prints">Prints / Lay Outs</h1>
             <a href="https://i.ibb.co/Hn3sb8v/ASTRONAUT.png"><img id="sb" class="img1" src="ASTRONAUT.png" alt=""></a>
             <a href="https://i.ibb.co/pWSm0w7/CarShow.png"><img id="ssb" class="img2" src="CarShow.png" alt=""></a>
             <a href="https://i.ibb.co/qJGWMJ4/PubG.png"><img id="sssb" class="img3" src="PubG.png" alt=""></a>
@@ -155,11 +155,40 @@
         <div>
             <h1 id="tshirt" class="T">T-Shirt</h1><br>
             <img id="img66" class="img6" src="ASTRONAUT NA NATUHOG.png" alt="">
-            <img id="img7" class="img7" src="Blood5.png" alt="">
-            <img id="img8" class="img8" src="Puno sa damit.png" alt="">
-            <img id="img9" class="img9" src="Etst.png" alt="">
+            <img id="img77" class="img7" src="Blood5.png" alt="">
+            <img id="img88" class="img8" src="Puno sa damit.png" alt="">
+            <img id="img99" class="img9" src="Etst.png" alt="">
         </div>
     </section>
+    <section id="tungkol">
+        <div class="likod">
+            <div class="sulat">
+                <h1 class="head">About Us <img class="art" src="Artboard 1.png" alt=""></h1>
+                <hr >
+                <p id="sulat">This is the "<span>Exclusive T-Shirt</span>" website i am <span>TABIBEE ALVAREZ</span><br>
+                    and i have a business partner and he is <span>LJ CLAUD</span> and <br> <span>Patricia</span> we
+                    decided to create a small business which is the designer
+                <span>T shirt design, Logo's, Poster</span>, etc... And we decided to start our
+                    business on <span>January 19 2023</span>, 2022 palang nag babalak na kame gumawa
+                    you can support us to sharing our post, likes.
+                    A side to photo editing you can hire me as your video editor
+                    you can see my edit <a class="here" href="https://www.facebook.com/Tabibeegaming"><span>HERE</span></a><br><br>
+                    Reminder ang presyo ng design ay naka depende sa ipapagawa mong design.
+                </p><br><br>
+                <a class="tshirt omsim shirtt" href="#pangatlo">T shirt</a>
+                <a class="desenyo omsim senyo" href="#second">Lay Outs</a>
+            </div>
+        </div>
+    </section>
+    <footer id="paa-foot">
+        <img src="Artboard 1.png" alt="">
+        <p>©Tabibee Alvarez Developer All Right Reserved</p>
+        <a href="https://www.facebook.com/Tabibeegaming"><i class="fa-brands fa-facebook fb"></i></a>
+        <a href="https://www.tiktok.com/@tabibeegaming"><i class="fa-brands fa-tiktok tt"></i></a>
+        <a href="https://www.youtube.com/channel/UCCevkYd9KxuCAZpktzj6B2g"><i class="fa-brands fa-youtube yt"></i></a>
+        <hr class="line">
+        
+    </footer>
 </main>
     <script src="tabibee.js"></script>
 </body>
