--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
     </section>
     <section id="pangatlo">
         <div>
-            <h1 id="tshirt" class="T">T-Shirt</h1><br>
+            <h1 id="tshirt" class="T shirTE">T-Shirt</h1><br>
             <img id="img66" class="img6" src="ASTRONAUT NA NATUHOG.png" alt="">
             <img id="img77" class="img7" src="Blood5.png" alt="">
             <img id="img88" class="img8" src="Puno sa damit.png" alt="">
