--- a/index.html
+++ b/index.html
@@ -52,9 +52,10 @@
         <div>
             <h1 id="tshirt" class="T">T-Shirt</h1><br>
             <img id="img6" class="img6" src="ASTRONAUT NA NATUHOG.png" alt="">
-            <img id="img7" class="img7" src="Blood5.png" alt="">
-            <img id="img8" class="img8" src="Puno sa damit.png" alt="">
+            <img id="img7" class="img7" src="Etst v2.png" alt="">
+            <img id="img8" class="img8" src="Glitch.png" alt="">
             <img id="img9" class="img9" src="Etst.png" alt="">
+            <a href="pictures.html"><h1 class="seemore">See more..</h1></a>
         </div>
     </section>
     <section id="section3">
@@ -155,9 +156,10 @@
         <div>
             <h1 id="tshirt" class="T shirTE">T-Shirt</h1><br>
             <img id="img66" class="img6" src="ASTRONAUT NA NATUHOG.png" alt="">
-            <img id="img77" class="img7" src="Blood5.png" alt="">
-            <img id="img88" class="img8" src="Puno sa damit.png" alt="">
+            <img id="img77" class="img7" src="Etst v2.png" alt="">
+            <img id="img88" class="img8" src="Glitch.png" alt="">
             <img id="img99" class="img9" src="Etst.png" alt="">
+            <a href="pictures.html"><h1 class="seeemore">See more..</h1></a>
         </div>
     </section>
     <section id="tungkol">
