--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Exclusive Tshirt</title>
+    <title>Exclusive Tshirt / HOME</title>
     <link rel="stylesheet" href="tabibee.css">
     <link rel="shortcut icon" href="Artboard 1.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
@@ -52,7 +52,7 @@
         <div>
             <h1 id="tshirt" class="T">T-Shirt</h1><br>
             <img id="img6" class="img6" src="ASTRONAUT NA NATUHOG.png" alt="">
-            <img id="img7" class="img7" src="Etst v2.png" alt="">
+            <img id="img7" class="img7" src="One Piece Luffy.png" alt="">
             <img id="img8" class="img8" src="Glitch.png" alt="">
             <img id="img9" class="img9" src="Etst.png" alt="">
             <a href="pictures.html"><h1 class="seemore">See more..</h1></a>
