--- a/index.html
+++ b/index.html
@@ -70,9 +70,8 @@
                 <span>T shirt design, Logo's, Poster</span>, etc... And we decided to start our
                     business on <span>January 19 2023</span>, 2022 palang nag babalak na kame gumawa
                     you can support us to sharing our post, likes.
-                    A side to photo editing you can hire me as your video editor
-                    you can see my edit <a class="here" href="https://www.facebook.com/Tabibeegaming"><span>HERE</span></a><br><br>
-                    Reminder ang presyo ng design ay naka depende sa ipapagawa mong design.
+                    for the price is SMALL - MEDIUM 330PHP and LARGE - XL 350PHP, DOUBLE XL 370PHP <a class="here" href="https://www.facebook.com/Tabibeegaming"><span>HERE</span></a><br><br>
+                    Reminder black or white same price.
                 </p><br><br>
                 <a class="tshirt omsim" href="#section2">T shirt</a>
                 <a class="desenyo omsim" href="#section1">Lay Outs</a>
@@ -156,7 +155,7 @@
         <div>
             <h1 id="tshirt" class="T shirTE">T-Shirt</h1><br>
             <img id="img66" class="img6" src="ASTRONAUT NA NATUHOG.png" alt="">
-            <img id="img77" class="img7" src="Etst v2.png" alt="">
+            <img id="img77" class="img7" src="One Piece Luffy.png" alt="">
             <img id="img88" class="img8" src="Glitch.png" alt="">
             <img id="img99" class="img9" src="Etst.png" alt="">
             <a href="pictures.html"><h1 class="seeemore">See more..</h1></a>
@@ -173,9 +172,8 @@
                 <span>T shirt design, Logo's, Poster</span>, etc... And we decided to start our
                     business on <span>January 19 2023</span>, 2022 palang nag babalak na kame gumawa
                     you can support us to sharing our post, likes.
-                    A side to photo editing you can hire me as your video editor
-                    you can see my edit <a class="here" href="https://www.facebook.com/Tabibeegaming"><span>HERE</span></a><br><br>
-                    Reminder ang presyo ng design ay naka depende sa ipapagawa mong design.
+                    for the price is SMALL - MEDIUM 330PHP and LARGE - XL 350PHP, DOUBLE XL 370PHP <a class="here" href="https://www.facebook.com/Tabibeegaming"><span>HERE</span></a><br><br>
+                    Reminder black or white same price.
                 </p><br><br>
                 <a class="tshirt omsim shirtt" href="#pangatlo">T shirt</a>
                 <a class="desenyo omsim senyo" href="#second">Lay Outs</a>
