--- a/pictures.html
+++ b/pictures.html
@@ -14,6 +14,9 @@
         <div class="back">
             <a href="index.html"><i class="fa-sharp fa-solid fa-arrow-left"></i></a>
         </div>
+        <audio controls autoplay loop>
+            <source src="yt5s.com - Blakdyak good boy (128 kbps).mp3" type="audio/mp3">
+        </audio>
         <div class="imahe">
             <img src="ASTRONAUT NA NATUHOG.png" alt="">
             <img src="Etst v2.png" alt="">
@@ -26,5 +29,6 @@
         </div>
     </main>
     <script src="pictures.js"></script>
+    <script src="tabibee.js"></script>
 </body>
 </html>
