--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="welcome">
             <img src="ART.gif" alt="">
             <h1>Welcome To ETST</h1>
-            <button>Get Started</button>
+            <button onclick="inside()">Get Started</button>
         </div>
     </main>
     <script src="index.js"></script>
