--- a/inside.html
+++ b/inside.html
@@ -21,8 +21,8 @@
             </ul>
         </nav>
         <div class="img">
-            <img src="ART.gif" width="220" alt="">
-            <h1>𝓔𝓧𝓒𝓛𝓤𝓢𝓘𝓥𝓔<br> 𝓣 𝓢𝓗𝓘𝓡𝓣</h1>
+            <img src="ART.gif" width="180" alt="">
+            <h1>𝗘𝗫𝗖𝗟𝗨𝗦𝗜𝗩𝗘 𝗧𝗦𝗛𝗜𝗥𝗧</h1>
         </div>
 
     </main>
