--- a/inside.html
+++ b/inside.html
@@ -16,16 +16,26 @@
                 <li>
                     <a href="index.html"><i class="fa-sharp fa-solid fa-arrow-left"></i></a>
                     <a href="">T shirt</a>
-                    <a href="">Design / Layout</a>
+                    <a href="#section1">Design / Layout</a>
                 </li>
             </ul>
         </nav>
         <div class="img">
             <img src="ART.gif" width="180" alt="">
-            <h1>𝗘𝗫𝗖𝗟𝗨𝗦𝗜𝗩𝗘 𝗧𝗦𝗛𝗜𝗥𝗧</h1>
+            <h1 class="etst">𝗘𝗫𝗖𝗟𝗨𝗦𝗜𝗩𝗘 𝗧𝗦𝗛𝗜𝗥𝗧</h1>
         </div>
-
     </main>
+        <section id="section1">
+            <div class="design">
+                <h1 class="design">Design / Layout's</h1>
+            </div>
+            <div class="img">
+                <img src="CarShow.png" alt="">
+                <img src="to the moon.png" alt="">
+                <a href="">See more..</a>
+            </div>
+            <hr>
+        </section>
     <script src="index.js"></script>
 </body>
 </html>
