--- a/inside.html
+++ b/inside.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
-    <link rel="shortcut icon" href="Artboard 1.png" type="image/x-icon">
+    <link rel="shortcut icon" href="ART.gif" type="image/x-icon">
     <link rel="stylesheet" href="inside.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
 </head>
@@ -35,6 +35,14 @@
                 <a href="">See more..</a>
             </div>
             <hr>
+            <div class="tshirt">
+                <div class="tshirt-img">
+                    <h1 class="tshirts">T shirts</h1>
+                    <img class="img2" src="Luffy back.png" alt="">
+                    <img class="img2" src="Cogeo.png" alt="">
+                    <a href="">See more..</a>
+                </div>
+            </div>
         </section>
     <script src="index.js"></script>
 </body>
