--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <main>
         <div class="welcome">
-            <img src="ART.gif" alt="">
+            <img src="Glitch Logo ETST.png" alt="">
             <h1>Welcome To ETST</h1>
             <button onclick="inside()">Get Started</button>
         </div>
