--- a/inside.html
+++ b/inside.html
@@ -15,13 +15,14 @@
             <ul>
                 <li>
                     <a href="index.html"><i class="fa-sharp fa-solid fa-arrow-left"></i></a>
-                    <a href="">T shirt</a>
+                    <a href="#tshirt">T shirt</a>
                     <a href="#section1">Design / Layout</a>
                 </li>
             </ul>
         </nav>
         <div class="img">
-            <img src="ART.gif" width="180" alt="">
+            <img class="imahe" src="ART.gif" width="180" alt="">
+            <img class="tago" src="ART.gif" alt="">
             <h1 class="etst">𝗘𝗫𝗖𝗟𝗨𝗦𝗜𝗩𝗘 𝗧𝗦𝗛𝗜𝗥𝗧</h1>
         </div>
     </main>
@@ -35,7 +36,7 @@
                 <a href="">See more..</a>
             </div>
             <hr>
-            <div class="tshirt">
+            <div id="tshirt" class="tshirt">
                 <div class="tshirt-img">
                     <h1 class="tshirts">T shirts</h1>
                     <img class="img2" src="Luffy back.png" alt="">
