--- a/inside.html
+++ b/inside.html
@@ -16,7 +16,7 @@
                 <li>
                     <a href="index.html"><i class="fa-sharp fa-solid fa-arrow-left"></i></a>
                     <a href="#tshirt">T shirt</a>
-                    <a href="#section1">Design / Layout</a>
+                    <a href="#designs">Design / Layout</a>
                 </li>
             </ul>
         </nav>
@@ -30,9 +30,11 @@
             <div class="design">
                 <h1 class="design">Design / Layout's</h1>
             </div>
-            <div class="img">
-                <img src="CarShow.png" alt="">
-                <img src="to the moon.png" alt="">
+            <div id="designs" class="img">
+                <img class="carimg" src="CarShow.png" alt="">
+                <img class="moonimg" src="to the moon.png" alt="">
+                <img class="imgcar" src="CarShow.png" alt="">
+                <img class="imgmoon" src="to the moon.png" alt="">
                 <a href="">See more..</a>
             </div>
             <hr>
