--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>eXclusive Tshirt Test Server</title>
     <link rel="stylesheet" href="index.css">
-    <link rel="shortcut icon" href="Artboard 1.png" type="image/x-icon">
+    <link rel="shortcut icon" href="ART.gif" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
 </head>
 <body>
