--- a/inside.html
+++ b/inside.html
@@ -25,6 +25,12 @@
                 </div>
             </div>
         </div>
+        <div class="home-page">
+            <div class="img">
+                <img class="img1" src="Art.gif" alt="">
+            </div>
+            
+        </div>
     </main>
     <script src="inside.js"></script>
 </body>
