--- a/inside.html
+++ b/inside.html
@@ -26,10 +26,9 @@
             </div>
         </div>
         <div class="home-page">
-            <div class="img">
+            <div class="larawan">
                 <img  class="img1" src="Art.gif" alt="">
             </div>
-            
         </div>
     </main>
     <script src="inside.js"></script>
