--- a/inside.html
+++ b/inside.html
@@ -27,7 +27,7 @@
         </div>
         <div class="home-page">
             <div class="larawan">
-                <img  class="img1" src="Art.gif" alt="">
+                <img  class="img1" src="Glitch Logo ETST.png" alt="">
             </div>
         </div>
     </main>
