--- a/inside.html
+++ b/inside.html
@@ -22,13 +22,12 @@
                     <a class="contact" href="">Contact Us</a>
                     <a class="tshirt" href="">T shirt</a>
                     <a class="design" href="">Design / Layouts</a>
+                    <div id="toggle" class="toggle"></div>
                 </div>
             </div>
         </div>
-        <div class="home-page">
-            <div class="larawan">
-                <img  class="img1" src="Art.gif" alt="">
-            </div>
+        <div>
+            <img  id="image1" class="image" src="ART.gif" alt="">
         </div>
     </main>
     <script src="inside.js"></script>
