--- a/inside.html
+++ b/inside.html
@@ -26,8 +26,12 @@
                 </div>
             </div>
         </div>
-        <div>
+        <div class="gif-image">
             <img  id="image1" class="image" src="ART.gif" alt="">
+            <div class="buttons">
+                <button onclick="shopnow()" id="button1" class="button1">SHOP NOW!</button>
+                <button class="learn">Learn More..</button>
+            </div>
         </div>
     </main>
     <script src="inside.js"></script>
