--- a/inside.html
+++ b/inside.html
@@ -14,11 +14,11 @@
         <div class="back">
             <a href="index.html"><i class="fas fa-hand-point-left"></i></a>
         </div>
-        <i id="opens" onclick="navopen()" class="fas fa-bars"></i>
+        <i id="opens" class="fas fa-bars"></i>
         <div id="background" class="background">
             <div id="menubars" class="menubar">
                 <div id="loob" class="inside-menu">
-                    <i onclick="navclose()" id="cloose" class="fab fa-xing"></i>
+                    <i id="cloose" class="fab fa-xing"></i>
                     <a class="contact" href="">Contact Us</a>
                     <a class="tshirt" href="">T shirt</a>
                     <a class="design" href="">Design / Layouts</a>
@@ -29,8 +29,8 @@
         <div class="gif-image">
             <img  id="image1" class="image" src="ART.gif" alt="">
             <div class="buttons">
-                <button onclick="shopnow()" id="button1" class="button1">SHOP NOW!</button>
-                <button class="learn">Learn More..</button>
+                <a class="button1" href="https://www.facebook.com/Tabibeegaming">SHOP NOW!</a>
+                <a class="learn" href="ART.gif" download>Download Our Logo</a>
             </div>
         </div>
     </main>
