--- a/inside.html
+++ b/inside.html
@@ -11,6 +11,7 @@
 </head>
 <body>
     <main>
+    <div class="main-div">
         <div class="back">
             <a href="index.html"><i class="fas fa-hand-point-left"></i></a>
         </div>
@@ -31,6 +32,16 @@
             <div class="buttons">
                 <a class="button1" href="https://www.facebook.com/Tabibeegaming">SHOP NOW!</a>
                 <a class="learn" href="ART.gif" download>Download Our Logo</a>
+                <a class="browse" href="#designs">Browse</a>
+            </div>
+        </div>
+    </div>
+        <div id="designs" class="designs">
+            <div class="inside-design">
+                <h1 id="welcome" class="welcome">Welcome</h1>
+                <img src="CarShow.png" alt="">
+                <img src="PubG.png" alt="">
+                <a href="#">See More..</a>
             </div>
         </div>
     </main>
