--- a/inside.html
+++ b/inside.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <main>
-    <div class="main-div">
+    <div id="main-div" class="main-div">
         <div class="back">
             <a href="index.html"><i class="fas fa-hand-point-left"></i></a>
         </div>
@@ -22,8 +22,9 @@
                     <i id="cloose" class="fab fa-xing"></i>
                     <a class="contact" href="">Contact Us</a>
                     <a class="tshirt" href="">T shirt</a>
-                    <a class="design" href="">Design / Layouts</a>
-                    <div id="toggle" class="toggle"></div>
+                    <a class="design" href="#designs">Design / Layouts</a>
+                    <a class="ilaws" onclick="dark()" href="">Dark Mode</a>
+                    <a id="ilaw" class="ilaw" onclick="light()" href="">Light Mode</a>
                 </div>
             </div>
         </div>
