--- a/inside.html
+++ b/inside.html
@@ -13,18 +13,18 @@
     <main>
     <div id="main-div" class="main-div">
         <div class="back">
-            <a href="index.html"><i class="fas fa-hand-point-left"></i></a>
+            <a href="index.html"><i id="back" class="fas fa-hand-point-left"></i></a>
         </div>
         <i id="opens" class="fas fa-bars"></i>
         <div id="background" class="background">
             <div id="menubars" class="menubar">
                 <div id="loob" class="inside-menu">
                     <i id="cloose" class="fab fa-xing"></i>
-                    <a class="contact" href="">Contact Us</a>
-                    <a class="tshirt" href="">T shirt</a>
-                    <a class="design" href="#designs">Design / Layouts</a>
-                    <a class="ilaws" onclick="dark()" href="">Dark Mode</a>
-                    <a id="ilaw" class="ilaw" onclick="light()" href="">Light Mode</a>
+                    <a id="contact" class="contact" href="">Contact Us</a>
+                    <a id="tshirt" class="tshirt" href="">T shirt</a>
+                    <a id="design" class="design" href="#designs">Design / Layouts</a>
+                    <a id="ilaws" class="ilaws" onclick="dark()">Dark Mode</a>
+                    <a id="ilaw" class="ilaw" onclick="light()">Light Mode</a>
                 </div>
             </div>
         </div>
