--- a/inside.html
+++ b/inside.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home | EXCLUSIVE</title>
-    <link rel="shortcut icon" href="Glitch Logo ETST.png" type="image/x-icon">
     <link rel="stylesheet" href="inside.css">
+    <link rel="shortcut icon" href="Glitch Logo ETST.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
 </head>
 <body>
@@ -43,6 +43,14 @@
                 <img src="CarShow.png" alt="">
                 <img src="PubG.png" alt="">
                 <a href="#">See More..</a>
+            </div>
+        </div>
+        <div class="background-tshirt">
+            <div class="inside-tshirt">
+                <h1>T - shirt</h1>
+                <img src="luffy back.png" alt="">
+                <img src="Cogeo.png" alt="">
+                <a href="">See More..</a>
             </div>
         </div>
     </main>
