--- a/inside.html
+++ b/inside.html
@@ -42,7 +42,7 @@
                 <h1 id="welcome" class="welcome">Welcome</h1>
                 <img src="CarShow.png" alt="">
                 <img src="PubG.png" alt="">
-                <a href="#">See More..</a>
+                <a href="design inside.html">See More..</a>
             </div>
         </div>
         <div class="background-tshirt">
