--- a/inside.html
+++ b/inside.html
@@ -48,7 +48,7 @@
         <div class="background-tshirt">
             <div class="inside-tshirt">
                 <h1>T - shirt</h1>
-                <img src="luffy back.png" alt="">
+                <img src="ASTRONAUT NA NATUHOG.png" alt="">
                 <img src="Cogeo.png" alt="">
                 <a href="">See More..</a>
             </div>
