--- a/inside.html
+++ b/inside.html
@@ -21,7 +21,7 @@
                 <div id="loob" class="inside-menu">
                     <i id="cloose" class="fab fa-xing"></i>
                     <a id="contact" class="contact" href="">Contact Us</a>
-                    <a id="tshirt" class="tshirt" href="">T shirt</a>
+                    <a id="tshirt" class="tshirt" href="#damit">T shirt</a>
                     <a id="design" class="design" href="#designs">Design / Layouts</a>
                     <a id="ilaws" class="ilaws" onclick="dark()">Dark Mode</a>
                     <a id="ilaw" class="ilaw" onclick="light()">Light Mode</a>
@@ -45,7 +45,7 @@
                 <a href="design inside.html">See More..</a>
             </div>
         </div>
-        <div class="background-tshirt">
+        <div id="damit" class="background-tshirt">
             <div class="inside-tshirt">
                 <h1>T - shirt</h1>
                 <img src="ASTRONAUT NA NATUHOG.png" alt="">
