--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>eXclusive T ShirT</title>
     <link rel="stylesheet" href="index.css">
-    <link rel="shortcut icon" href="ART.gif" type="image/x-icon">
+    <link rel="shortcut icon" href="picture/ART.gif" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
 </head>
 <body>
     <main>
         <div class="img">
             <div class="text">
-                <img src="ART.gif" alt="">
+                <img src="picture/ART.gif" alt="">
                 <h1>Welcome To ETST</h1>
                 <a href="inside.html">Get Started</a>
             </div>
