--- a/inside.html
+++ b/inside.html
@@ -6,54 +6,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home | EXCLUSIVE</title>
     <link rel="stylesheet" href="inside.css">
-    <link rel="shortcut icon" href="Glitch Logo ETST.png" type="image/x-icon">
+    <link rel="shortcut icon" href="/picture/Glitch Logo ETST.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
 </head>
 <body>
     <main>
-    <div id="main-div" class="main-div">
-        <div class="back">
-            <a href="index.html"><i id="back" class="fas fa-hand-point-left"></i></a>
-        </div>
-        <i id="opens" class="fas fa-bars"></i>
-        <div id="background" class="background">
-            <div id="menubars" class="menubar">
-                <div id="loob" class="inside-menu">
-                    <i id="cloose" class="fab fa-xing"></i>
-                    <a id="contact" class="contact" href="">Contact Us</a>
-                    <a id="tshirt" class="tshirt" href="#damit">T shirt</a>
-                    <a id="design" class="design" href="#designs">Design / Layouts</a>
-                    <a id="ilaws" class="ilaws" onclick="dark()">Dark Mode</a>
-                    <a id="ilaw" class="ilaw" onclick="light()">Light Mode</a>
-                </div>
+        <div class="background"></div>
+        <nav>
+            <ul>
+                <li>
+                    <img src="/picture/Glitch Logo ETST.png" alt="">
+                    <a class="new" href="#new">New</a>
+                    <a class="women" href="">Exclusive</a>
+                    <a class="men" href="">About us</a>
+                </li>
+            </ul>
+        </nav>
+            <div class="front">
+                <h1>Exclusive T Shirt</h1>
+                <p>SHOP OUR BEST SELLING T SHIRT NOW!!</p>
+                
             </div>
-        </div>
-        <div class="gif-image">
-            <img  id="image1" class="image" src="ART.gif" alt="">
-            <div class="buttons">
-                <a class="button1" href="https://www.facebook.com/Tabibeegaming">SHOP NOW!</a>
-                <a class="learn" href="ART.gif" download>Download Our Logo</a>
-                <a class="browse" href="#designs">Browse</a>
-            </div>
-        </div>
-    </div>
-        <div id="designs" class="designs">
-            <div class="inside-design">
-                <h1 id="welcome" class="welcome">Welcome</h1>
-                <img src="CarShow.png" alt="">
-                <img src="PubG.png" alt="">
-                <a href="design inside.html">See More..</a>
-            </div>
-        </div>
-        <div id="damit" class="background-tshirt">
-            <div class="inside-tshirt">
-                <h1>T - shirt</h1>
-                <img src="ASTRONAUT NA NATUHOG.png" alt="">
-                <img src="Cogeo.png" alt="">
-                <a href="">See More..</a>
-            </div>
-        </div>
     </main>
+        <section id="new" class="new-arrivals">
+            <h1>New Arrivals</h1>
+            <img src="picture/One Piece ZORO.png" alt="">
+            <img src="picture/Tree.png" alt="">
+            <img src="picture/KAISEN.png" alt="">
+            <a href="oldtshirt.html">Old Tshirt</a>
+        </section>
     <script src="inside.js"></script>
 </body>
 </html>
