--- a/oldtshirt.html
+++ b/oldtshirt.html
@@ -14,13 +14,13 @@
         <a href="inside.html"><i id="back" class="fas fa-hand-point-left"></i></a>
         <div class="tshirts">
             <img src="picture/Luffy back.png" alt="">
-            <img src="/picture/One Piece Luffy WHITE.png" alt="">
-            <img src="/picture/One Piece Luffy.png" alt="">
-            <img src="/picture/One Piece ZORO WHITE.png" alt="">
-            <img src="/picture/One Piece ZORO.png" alt="">
-            <img src="/picture/Cogeo.png" alt="">
-            <img src="/picture/KAISEN.png" alt="">
-            <img src="/picture/Tree.png" alt="">
+            <img src="picture/One Piece Luffy WHITE.png" alt="">
+            <img src="picture/One Piece Luffy.png" alt="">
+            <img src="picture/One Piece ZORO WHITE.png" alt="">
+            <img src="picture/One Piece ZORO.png" alt="">
+            <img src="picture/Cogeo.png" alt="">
+            <img src="picture/KAISEN.png" alt="">
+            <img src="picture/Tree.png" alt="">
         </div>
     </main>
 </body>
