--- a/inside.html
+++ b/inside.html
@@ -15,7 +15,7 @@
         <nav>
             <ul>
                 <li>
-                    <img src="/picture/Glitch Logo ETST.png" alt="">
+                    <img src="picture/Glitch Logo ETST.png" alt="">
                     <a class="new" href="#new">New</a>
                     <a class="women" href="">Exclusive</a>
                     <a class="men" href="">About us</a>
